--- a/amq-streams-1.1.0-ocp-install-examples/install/cluster-operator/032-RoleBinding-strimzi-cluster-operator-topic-operator-delegation.yaml
+++ b/amq-streams-1.1.0-ocp-install-examples/install/cluster-operator/032-RoleBinding-strimzi-cluster-operator-topic-operator-delegation.yaml
@@ -7,7 +7,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: strimzi-cluster-operator
-  namespace: myproject
+  namespace: my-project
 roleRef:
   kind: ClusterRole
   name: strimzi-topic-operator
